// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Parsing elodin syntax should correctly parse conditionals 1`] = `
Object {
  "body": Array [
    Object {
      "body": Array [
        Object {
          "type": "Identifier",
          "value": "Dark",
        },
        Object {
          "type": "Identifier",
          "value": "Light",
        },
      ],
      "name": "Type",
      "type": "Variant",
    },
    Object {
      "body": Array [
        Object {
          "dynamic": false,
          "property": "backgroundColor",
          "raw": false,
          "type": "Declaration",
          "value": Object {
            "alpha": 1,
            "blue": 0,
            "format": "keyword",
            "green": 0,
            "red": 255,
            "type": "Color",
          },
        },
        Object {
          "body": Array [
            Object {
              "dynamic": false,
              "property": "backgroundColor",
              "raw": false,
              "type": "Declaration",
              "value": Object {
                "alpha": 1,
                "blue": 255,
                "format": "keyword",
                "green": 0,
                "red": 0,
                "type": "Color",
              },
            },
          ],
          "operator": "=",
          "property": Object {
            "type": "Identifier",
            "value": "Type",
          },
          "type": "Conditional",
          "value": Object {
            "type": "Identifier",
            "value": "Primary",
          },
        },
      ],
      "format": "view",
      "name": "Button",
      "type": "Style",
    },
  ],
  "type": "File",
}
`;

exports[`Parsing elodin syntax should correctly parse env condition 1`] = `
Object {
  "body": Array [
    Object {
      "body": Array [
        Object {
          "body": Array [
            Object {
              "dynamic": false,
              "property": "backgroundColor",
              "raw": false,
              "type": "Declaration",
              "value": Object {
                "alpha": 1,
                "blue": 0,
                "format": "keyword",
                "green": 0,
                "red": 255,
                "type": "Color",
              },
            },
          ],
          "boolean": true,
          "property": Object {
            "environment": true,
            "type": "Variable",
            "value": "hover",
          },
          "type": "Conditional",
        },
        Object {
          "body": Array [
            Object {
              "dynamic": false,
              "property": "backgroundColor",
              "raw": false,
              "type": "Declaration",
              "value": Object {
                "alpha": 1,
                "blue": 255,
                "format": "keyword",
                "green": 0,
                "red": 0,
                "type": "Color",
              },
            },
            Object {
              "body": Array [
                Object {
                  "dynamic": false,
                  "property": "backgroundColor",
                  "raw": false,
                  "type": "Declaration",
                  "value": Object {
                    "alpha": 1,
                    "blue": 0,
                    "format": "keyword",
                    "green": 128,
                    "red": 0,
                    "type": "Color",
                  },
                },
              ],
              "boolean": true,
              "property": Object {
                "environment": true,
                "type": "Variable",
                "value": "hover",
              },
              "type": "Conditional",
            },
          ],
          "operator": ">=",
          "property": Object {
            "environment": true,
            "type": "Variable",
            "value": "viewportWidth",
          },
          "type": "Conditional",
          "value": Object {
            "negative": false,
            "type": "Integer",
            "value": 320,
          },
        },
      ],
      "format": "view",
      "name": "Button",
      "type": "Style",
    },
  ],
  "type": "File",
}
`;

exports[`Parsing elodin syntax should correctly parse fragments 1`] = `
Object {
  "body": Array [
    Object {
      "body": Array [
        Object {
          "dynamic": false,
          "property": "flexDirection",
          "raw": false,
          "type": "Declaration",
          "value": Object {
            "type": "Identifier",
            "value": "row",
          },
        },
        Object {
          "dynamic": false,
          "property": "alignSelf",
          "raw": false,
          "type": "Declaration",
          "value": Object {
            "type": "Identifier",
            "value": "stretch",
          },
        },
        Object {
          "dynamic": false,
          "property": "flexGrow",
          "raw": false,
          "type": "Declaration",
          "value": Object {
            "negative": false,
            "type": "Integer",
            "value": 0,
          },
        },
        Object {
          "dynamic": false,
          "property": "flexShrink",
          "raw": false,
          "type": "Declaration",
          "value": Object {
            "negative": false,
            "type": "Integer",
            "value": 1,
          },
        },
        Object {
          "dynamic": false,
          "property": "flexBasis",
          "raw": false,
          "type": "Declaration",
          "value": Object {
            "negative": false,
            "type": "Integer",
            "value": 50,
          },
        },
      ],
      "name": "Flex",
      "type": "Fragment",
    },
  ],
  "type": "File",
}
`;

exports[`Parsing elodin syntax should correctly parse multiple styles 1`] = `
Object {
  "body": Array [
    Object {
      "body": Array [
        Object {
          "dynamic": false,
          "property": "backgroundColor",
          "raw": false,
          "type": "Declaration",
          "value": Object {
            "alpha": 1,
            "blue": 0,
            "format": "keyword",
            "green": 0,
            "red": 255,
            "type": "Color",
          },
        },
        Object {
          "dynamic": false,
          "property": "paddingLeft",
          "raw": false,
          "type": "Declaration",
          "value": Object {
            "negative": false,
            "type": "Integer",
            "value": 10,
          },
        },
      ],
      "format": "view",
      "name": "Button",
      "type": "Style",
    },
    Object {
      "body": Array [
        Object {
          "dynamic": false,
          "property": "lineHeight",
          "raw": false,
          "type": "Declaration",
          "value": Object {
            "negative": false,
            "type": "Integer",
            "value": 2,
          },
        },
      ],
      "format": "text",
      "name": "Label",
      "type": "Style",
    },
  ],
  "type": "File",
}
`;

exports[`Parsing elodin syntax should correctly parse styles 1`] = `
Object {
  "body": Array [
    Object {
      "body": Array [
        Object {
          "dynamic": false,
          "property": "backgroundColor",
          "raw": false,
          "type": "Declaration",
          "value": Object {
            "alpha": 1,
            "blue": 0,
            "format": "keyword",
            "green": 0,
            "red": 255,
            "type": "Color",
          },
        },
        Object {
          "dynamic": false,
          "property": "borderColor",
          "raw": false,
          "type": "Declaration",
          "value": Object {
            "alpha": 1,
            "blue": 255,
            "format": "rgb",
            "green": 255,
            "red": 255,
            "type": "Color",
          },
        },
        Object {
          "dynamic": false,
          "property": "paddingLeft",
          "raw": false,
          "type": "Declaration",
          "value": Object {
            "negative": false,
            "type": "Integer",
            "value": 15,
          },
        },
        Object {
          "dynamic": false,
          "property": "marginTop",
          "raw": false,
          "type": "Declaration",
          "value": Object {
            "fractional": 2,
            "integer": 1,
            "negative": false,
            "type": "Float",
          },
        },
        Object {
          "dynamic": true,
          "property": "borderWidth",
          "raw": false,
          "type": "Declaration",
          "value": Object {
            "environment": false,
            "type": "Variable",
            "value": "width",
          },
        },
        Object {
          "dynamic": false,
          "property": "animationName",
          "raw": true,
          "type": "Declaration",
          "value": Object {
            "type": "Identifier",
            "value": "keyframe",
          },
        },
      ],
      "format": "view",
      "name": "Button",
      "type": "Style",
    },
  ],
  "type": "File",
}
`;
